<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/insert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/etAuthor"
        android:hint="@string/insert_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <EditText
        android:id="@+id/etPublisher"
        android:hint="@string/insert_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <EditText
        android:id="@+id/etIsbn"
        android:hint="@string/insert_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_search_activity"
        android:text="@string/search"
        android:layout_gravity="center"
        android:background="@drawable/search_button_shape"
        android:textSize="18sp"
        android:textColor="#ffff"/>
</LinearLayout>